--- a/CNN2D copy 3.ipynb
+++ b/CNN2D copy 3.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dealing with missing values"
+    "# Dealing with missing values"
    ]
   },
   {
